-. 테스트 시 메모리 사용을 많이해서, 메모리를 늘리고, 데이터 크기를 줄였다.